--- a/longer/references_bayesian_modeling.bib
+++ b/longer/references_bayesian_modeling.bib
@@ -36,7 +36,7 @@
 }
 
 @manual{wojnowiczXXXXexponential,
-	title={The exponential family,
+	title={The exponential family},
 	author={Wojnowicz,  Michael},
 	note={Available (with permission)},
 }
