--- a/workshop_one_week/references_bayesian_modeling_workshop.bib
+++ b/workshop_one_week/references_bayesian_modeling_workshop.bib
@@ -1,5 +1,29 @@
 \usepackage{url}
 
+@article{hill2004multiple,
+  title={Multiple sudden infant deaths--coincidence or beyond coincidence?},
+  author={Hill, Ray},
+  journal={Paediatric and perinatal epidemiology},
+  volume={18},
+  number={5},
+  pages={320--326},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+@book{davison2003statistical,
+  title={Statistical models},
+  author={Davison, Anthony Christopher},
+  volume={11},
+  year={2003},
+  publisher={Cambridge university press}
+}
+
+@manual{guardianXXXXobscure,
+	title={The obscure maths theorem that governs the reliability of Covid testing},
+	note={Available at \url{https://www.theguardian.com/world/2021/apr/18/obscure-maths-bayes-theorem-reliability-covid-lateral-flow-tests-probability}},
+}
+
 @article{ioannidis2005most,
   title={Why most published research findings are false},
   author={Ioannidis, John PA},
