* Reorg'd top-level folders a bit * Started EXERCISES.md

--- a/slides/bm_multivariate_normal/bm_multivariate_normal.tex
+++ b/slides/bm_multivariate_normal/bm_multivariate_normal.tex
@@ -121,8 +121,8 @@ Suppose $\+y_i = (y_{i1},  \texttt{NA},  y_{i3},  \texttt{NA})^T$, so $\+o_i = (
 Then
 
 \begin{align*}
-p(\+o_i,  y_{i1},  y_{i3} \cond \+\theta) & = p(\+o_i) \;  p(y_{i1},  y_{i3} \cond \+\theta) \\
-&=  p(\+o_i) \;  \ds\int p( \+y_i  \cond \+\theta)  \; dy_2 \; dy_4
+p(\+o_i,  y_{i1},  y_{i3} \cond \+\mu, \+\Sigma) & = p(\+o_i) \;  p(y_{i1},  y_{i3} \cond \+\mu, \+\Sigma) \\
+&=  p(\+o_i) \;  \ds\int p( \+y_i  \cond \+\mu, \+\Sigma)  \; dy_2 \; dy_4
 \end{align*}
 \vfill 
 
